--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ button {
 .pororo {
   color: white;
   font-size: 23.99px;
-  line-height: 38.38px;
+  line-height: 38.38p;
 }
 
 .lol {
@@ -163,6 +163,7 @@ button {
 
 .section1__wrapper {
   display: flex;
+  justify-content: space-between;
 }
 
 .section__moon {
@@ -171,9 +172,10 @@ button {
 }
 
 .moon__img {
-  padding-top: 80px;
+  margin-top: 80px;
   -o-object-fit: cover;
      object-fit: cover;
+  border-radius: 30px;
 }
 
 .moon__info-wrapper {
