--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,18 @@ button {
   text-align: center;
   margin-bottom: 30px;
   border-color: transparent;
+  position: relative;
+}
+
+.btn2::before {
+  position: absolute;
+  content: "";
+  background-size: cover;
+  width: 20px;
+  height: 20px;
+  background-image: url(/assests/rocket.png);
+  left: 50px;
+  top: 17px;
 }
 
 .section1__wrapper {
