--- a/scss/blocks/_section1.scss
+++ b/scss/blocks/_section1.scss
@@ -11,7 +11,7 @@
 .pororo {
 	color: white;
 	font-size: 23.99px;
-    line-height: 38.38p;
+	line-height: 38.38p;
 }
 .lol {
 	color: white;
@@ -41,6 +41,18 @@
 	text-align: center;
 	margin-bottom: 30px;
 	border-color: transparent;
+	position: relative;
+}
+
+.btn2::before {
+	position: absolute;
+	content: '';
+	background-size: cover;
+	width: 20px;
+	height: 20px;
+	background-image: url(/assests/rocket.png);
+	left: 50px;
+	top: 17px;
 }
 
 .section1__wrapper {
