--- a/scss/blocks/_section1.scss
+++ b/scss/blocks/_section1.scss
@@ -4,23 +4,23 @@
 	padding-left: 115px;
 }
 
-.vaxaxa {
+.info__wrapper {
 	display: flex;
 	gap: 30px;
 }
-.pororo {
+.section1__info {
 	color: white;
 	font-size: 23.99px;
 	line-height: 38.38p;
 }
-.lol {
+.marketplace__text {
 	color: white;
 	font-size: 22px;
 	line-height: 35.2px;
 	padding-bottom: 30px;
 }
 
-.ecbiri {
+.discover__title {
 	margin-top: 80px;
 	color: white;
 	font-weight: 600;
