--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,11 @@
 @import './scss/fonts';
 @import './scss/mixin';
 @import './scss/general';
-@import './scss/blocks/header' ;
+@import './scss/blocks/header';
 @import './scss/blocks/section1';
+@import './scss/blocks/section2';
+@import './scss/blocks/section3';
+@import './scss/blocks/section4';
+@import './scss/blocks/section5';
+@import './scss/blocks/section6';
+@import '/scss/blocks/section7';
