--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@
 body {
   background-color: #2B2B2B;
   font-family: "Work-Sans";
+  color: white;
 }
 
 .container {
@@ -120,25 +121,25 @@ button {
   padding-left: 115px;
 }
 
-.vaxaxa {
+.info__wrapper {
   display: flex;
   gap: 30px;
 }
 
-.pororo {
+.section1__info {
   color: white;
   font-size: 23.99px;
   line-height: 38.38p;
 }
 
-.lol {
+.marketplace__text {
   color: white;
   font-size: 22px;
   line-height: 35.2px;
   padding-bottom: 30px;
 }
 
-.ecbiri {
+.discover__title {
   margin-top: 80px;
   color: white;
   font-weight: 600;
@@ -227,4 +228,334 @@ button {
   background-image: url(/assests/avatar.svg);
   left: 20px;
   top: 0px;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.rasmi {
+  display: flex;
+  gap: 30px;
+  margin-left: 115px;
+}
+
+.h1 {
+  color: white;
+  margin-left: 115px;
+  margin-top: 100px;
+  font-size: 50px;
+}
+
+.pisimi {
+  color: white;
+  margin-left: 115px;
+  margin-bottom: 49% 9;
+}
+
+.people__wrapper {
+  width: 240px;
+  height: 238px;
+  background-color: #3B3B3B;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.third__wrapper {
+  margin-left: 115px;
+}
+
+.third__title {
+  margin-top: 80px;
+  color: white;
+  font-weight: 600;
+  font-size: 38px;
+  line-height: 45.6px;
+}
+
+.third__subtitle {
+  color: white;
+  font-size: 22px;
+  line-height: 35.2px;
+}
+
+.third__button {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 247px;
+  height: 60px;
+  border: 2px solid #A259FF;
+  border-radius: 20px;
+  background-color: transparent;
+  color: white;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22.4px;
+  text-align: center;
+}
+
+.third__top-info {
+  position: relative;
+}
+
+.people__name {
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 30.8px;
+  text-align: center;
+}
+
+.people__sales {
+  font-size: 16px;
+  line-height: 22.4px;
+  padding-left: 20px;
+  padding-bottom: 10px;
+}
+
+.people__sales2 {
+  color: #858584;
+}
+
+.people__number {
+  width: 30px;
+  height: 30px;
+  background-color: #2B2B2B;
+  color: #858584;
+  border-radius: 20px;
+  font-size: 16px;
+  line-height: 22.4px;
+  text-align: center;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
+.people {
+  width: 1050px;
+  height: 774px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  margin-top: 60px;
+}
+
+.people__img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 110px;
+  height: 110px;
+  margin: auto;
+  padding-bottom: 20px;
+}
+
+.turtinci__section {
+  display: flex;
+}
+
+.lol {
+  color: white;
+  margin-left: 600px;
+  font-size: 28px;
+  margin-top: 30px;
+}
+
+.pic {
+  margin-left: 10px;
+}
+
+.image-list {
+  width: 1050px;
+  height: 238px;
+  padding: 100px 90px;
+  border-radius: 20px;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+ul {
+  list-style: none;
+}
+
+.image-item {
+  background-color: #3d3b3b;
+  border-radius: 10px;
+  height: 300px;
+}
+
+.container {
+  margin-top: -30px;
+}
+
+.image {
+  width: 100%;
+}
+
+.art {
+  color: white;
+  font-size: 24px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.yarmi {
+  width: 662px;
+  height: 238px;
+  padding: 100px 90px;
+  border-radius: 20px;
+  display: flex;
+  gap: 10px;
+  flex-wrap: nowrap;
+}
+
+.ok {
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+}
+
+/* section 4 */
+/* section5 start */
+.quzqorn {
+  width: 9000;
+  height: Hug 900px;
+  margin-left: 580px;
+  border-radius: 20px;
+}
+
+.rism {
+  justify-content: center;
+  align-items: center;
+}
+
+.NFT {
+  position: absolute;
+  padding: 20px 60px;
+  border-radius: 20px;
+  margin-left: -970px;
+  margin-top: 400px;
+  font-weight: 40px;
+  /* margin-top: -2000px; */
+}
+
+.NFT:hover {
+  color: #a259ff;
+}
+
+.bi {
+  color: #a259ff;
+}
+
+.ko {
+  color: white;
+  font-size: 51px;
+  position: absolute;
+  margin-left: 620px;
+  margin-top: 340px;
+}
+
+/* .ook {
+  padding: 10px 40px;
+  border-radius: 20px;
+  margin-left: -1030px;
+  margin-top: -395px;
+  font-weight: 40px;
+  background-color: #3b3b3b;
+  border: none;
+}
+.okk {
+  margin-left: -1090px;
+  margin: 00px;
+} */
+/* section5 end */
+/* section6 start */
+.lo {
+  color: white;
+  font-size: 38px;
+  margin-left: 600px;
+  margin-top: 90px;
+}
+
+.pii {
+  color: white;
+  font-size: 22px;
+  margin-left: 600px;
+  margin-top: 10px;
+}
+
+.biii {
+  color: #a259ff;
+}
+
+.NFTT {
+  position: absolute;
+  padding: 20px 60px;
+  border-radius: 20px;
+  margin-left: 1400px;
+  margin-top: -100px;
+  font-weight: 40px;
+  border: 1px solid #a259ff;
+  background-color: transparent;
+  color: white;
+  /* margin-top: -2000px; */
+}
+
+.NFTT:hover {
+  color: rgb(189, 127, 255);
+}
+
+.bi {
+  color: rgb(183, 68, 124);
+}
+
+.image-lisit {
+  padding: 100px 90px;
+  border-radius: 20px;
+  display: flex;
+  gap: 10px;
+  margin-left: 400px;
+  height: 500px;
+}
+
+ul {
+  list-style: none;
+}
+
+.image-itemm {
+  background-color: #3d3b3b;
+  border-radius: 10px;
+}
+
+.vax {
+  color: white;
+  font-size: 24px;
+  margin-top: 20px;
+}
+
+.beze {
+  position: absolute;
+  left: 460px;
+  margin: 40px;
+}
+
+.bezek {
+  position: absolute;
+  left: 900px;
+  margin: 40px;
+}
+
+.bezekk {
+  position: absolute;
+  left: 1340px;
+  margin: 40px;
+}
+
+.y {
+  position: absolute;
+}
+
+.o {
+  position: absolute;
+}
+
+.z {
+  position: absolute;
+}
+
+/* section6 end *//*# sourceMappingURL=style.css.map */
