--- a/style.scss
+++ b/style.scss
@@ -8,4 +8,6 @@
 @import './scss/blocks/section4';
 @import './scss/blocks/section5';
 @import './scss/blocks/section6';
-@import '/scss/blocks/section7';
+@import './scss/blocks/section7';
+@import './scss/blocks/section8';
+@import './scss/blocks/footer';
