--- a/scss/blocks/_section4.scss
+++ b/scss/blocks/_section4.scss
@@ -1,7 +1,9 @@
-.section4_title {
+.section4__title {
 	color: white;
 	font-size: 28px;
-	margin-top: 30px;
+	margin-top: 80px;
+	margin-left: 115px;
+	margin-bottom: 60px;
 }
 
 .image-list {
@@ -11,6 +13,7 @@
 	display: flex;
 	gap: 30px;
 	flex-wrap: wrap;
+	margin-left: 115px;
 }
 
 .image-item {
@@ -26,5 +29,3 @@
 	margin-top: 20px;
 	text-align: center;
 }
-
-
