--- a/scss/blocks/_section5.scss
+++ b/scss/blocks/_section5.scss
@@ -1,51 +1,117 @@
-/* section5 start */
-.quzqorn {
-	width: 1280px;
-	height: 640px;
-	margin-left: 580px;
-	border-radius: 20px;
+.magic__wrapper {
+  background-image: linear-gradient(to top, #a259ff, transparent),
+    url(/assests/qoziqorin2.png);
+  height: 640px;
+  background-repeat: no-repeat;
+  margin-top: 100px;
+  background-size: cover;
+  padding: 380px 115px 0;
 }
-.rism {
+.magic__title {
+  font-size: 51px;
+  color: white;
+}
+
+.magic__minibox {
+  width: 151px;
+  height: 44px;
+  border-radius: 20px;
+  background-color: #3b3b3b;
+  text-align: center;
+  position: relative;
+  margin-bottom: 30px;
+  text-align: center;
+}
+.magic__btn {
+  padding: 19px 50px;
+  border: none;
+  border-radius: 20px;
+  font-weight: 600;
+  position: relative;
+  text-align: center;
+  color: #2b2b2b;
+  text-align: center;
+  margin-top: 30px;
+}
+.minibox-text {
+  color: white;
+  font-size: 16px;
+  padding-top: 11px;
+  position: relative;
+}
+.magic__minibox:before {
+  position: absolute;
+  background-image: url(/assests/avatar2.png);
+  width: 24px;
+  height: 24px;
+  content: "";
+  background-size: cover;
+  left: 10px;
+  top: 10px;
+  right: 20px;
+}
+
+.magic__btn::after {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  content: "";
+  background-image: url(/assests/eye.png);
+  background-size: cover;
+  left: 26px;
+  bottom: 17px;
+}
+
+.magic__right-box {
+  width: 295px;
+  height: 147px;
+  background-color: #3b3b3b;
+  opacity: 0.8;
+  border-radius: 20px;
+  margin-top: 100px;
+
+}
+
+.magic__wrapper {
   display: flex;
-	justify-content: center;
-	align-items: center;
-	position: relative;
+  justify-content: space-between;
+}
+.magic__right_box_title {
+  font-size: 14px;
+  font-family: "Space Mono";
+  color: white;
+  padding: 30px 30px 10px 30px;
 }
 
-.NFT {
-	position: absolute;
-	padding: 20px 60px;
-	border-radius: 20px;
-	margin-left: -970px;
-	margin-top: 400px;
-	font-weight: 40px;
-	/* margin-top: -2000px; */
-}
-.NFT:hover {
-	color: #a259ff;
-}
-.bi {
-	color: #a259ff;
-}
-.ko {
-	color: white;
-	font-size: 51px;
-	position: absolute;
-	margin-left: 115px;
-	margin-top: 434px;
+.right_box_menu-item {
+  display: flex;
 }
 
-/* .ook {
-    padding: 10px 40px;
-    border-radius: 20px;
-    margin-left: -1030px;
-    margin-top: -395px;
-    font-weight: 40px;
-    background-color: #3b3b3b;
-    border: none;
-  }
-  .okk {
-    margin-left: -1090px;
-    margin: 00px;
-  } */
-/* section5 end */
+.right_box_menu-hour {
+  font-size: 38px;
+  color: white;
+  font-weight: 600;
+}
+
+.right_box_menu-hour-name {
+  font-size: 13px;
+  font-family: "Space Mono";
+  color: white;
+}
+
+.right_box_menu-hour_dor {
+  font-size: 28px;
+  color: white;
+}
+
+.magic__right_box-menu {
+  display: flex;
+  padding-left: 30px;
+  
+}
+
+.right_box_menu-item {
+  display: flex;
+  flex-direction: column;
+  padding-right: 10px;
+}
