--- a/scss/blocks/_section6.scss
+++ b/scss/blocks/_section6.scss
@@ -1,81 +1,108 @@
-/* section6 start */
-.lo {
-    color: white;
-    font-size: 38px;
-    margin-left: 600px;
-    margin-top: 90px;
-  }
-  
-  .pii {
-    color: white;
-    font-size: 22px;
-    margin-left: 600px;
-    margin-top: 10px;
-  }
-  
-  .biii {
-    color: #a259ff;
-  }
-  .NFTT {
-    position: absolute;
-    padding: 20px 60px;
-    border-radius: 20px;
-    font-weight: 40px;
-    border: 1px solid #a259ff;
-    background-color: transparent;
-    color: white;
-    /* margin-top: -2000px; */
-  }
-  .NFTT:hover {
-    color: rgb(189, 127, 255);
-  }
-  .bi {
-    color: rgb(183, 68, 124);
-  }
-  
-  .image-lisit {
-    border-radius: 20px;
-    display: flex;
-    gap: 10px;
-    height: 500px;
-  }
- 
-  .image-itemm {
-    background-color: #3d3b3b;
-    border-radius: 10px;
-  }
-  
-  .vax {
-    color: white;
-    font-size: 24px;
-    margin-top: 20px;
-  }
-  .beze {
-    position: absolute;
-    left: 460px;
-    margin: 40px;
-  }
-  .bezek {
-    position: absolute;
-    left: 900px;
-    margin: 40px;
-  }
-  .bezekk {
-    position: absolute;
-    left: 1340px;
-    margin: 40px;
-  }
-  
-  .y {
-    position: absolute;
-  }
-  
-  .o {
-    position: absolute;
-  }
-  
-  .z {
-    position: absolute;
-  }
-  
-  /* section6 end */
+.more {
+  padding-top: 80px;
+}
+
+.more_wrapper_item-text {
+  font-size: 38px;
+  font-weight: 600;
+  color: white;
+  padding-bottom: 10px;
+}
+
+.more_wrapepr_item-minitext {
+  font-size: 22px;
+  font-weight: 300;
+  color: white;
+}
+
+.more_wrapper_item-btn {
+  padding: 19px 50px 19px 50px;
+  background-color: transparent;
+  border: none;
+  border: 1px solid #a259ff;
+
+  color: white;
+  font-weight: 500;
+  font-size: 16px;
+  border-radius: 20px;
+  position: relative;
+  text-align: center;
+}
+
+.more_wrapper_item-btn:before {
+  position: absolute;
+  content: "";
+  background-size: cover;
+  width: 20px;
+  height: 20px;
+  background-image: url(/assests/eye.png);
+  left: 19px;
+  bottom: 18px;
+}
+
+.more_wrapper-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.more_bottom-box {
+  width: 420px;
+  height: 469px;
+  background-color: #3b3b3b;
+  border-radius: 20px;
+  margin-top: 60px;
+}
+
+.more_bottom_avatar-box {
+  @include d-flex(flex, 12px);
+  padding-top: 5px;
+  padding-left: 30px;
+}
+
+.more_bottom-title {
+  font-size: 22px;
+  color: white;
+  font-weight: 600;
+  padding-left: 30px;
+  padding-top: 20px;
+}
+
+.more_bottom_avatar-name {
+  font-family: "Space Mono";
+  font-size: 16px;
+  color: white;
+}
+
+.more_bottom_avatar-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.more_bottom_avatar_menu {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 46px;
+}
+
+.more_bottom_avatar-price {
+  font-size: 12px;
+  color: #858584;
+  font-weight: 300;
+  font-family: "Space Mono";
+}
+
+.more_bottom_avatar-number {
+  font-size: 18px;
+  font-weight: 400;
+  color: white;
+  font-family: "Space Mono";
+}
+
+.more_wrapper_bottom_box {
+  @include d-flex(flex, 30px);
+}
+
+
