--- a/scss/blocks/_section7.scss
+++ b/scss/blocks/_section7.scss
@@ -1,74 +1,69 @@
-/* section7 start */
-.ecbr {
-    color: white;
-    font-size: 38px;
-    margin-left: 600px;
-  }
-  .pi {
-    color: white;
-    font-size: 20px;
-    margin-left: 600px;
-  }
-  
-  .list {
-    /* width: 600px;
-    height: 238px;
-    padding: 100px 90px;
-    border-radius: 20px;
-    display: flex;
-    width: 800px;
-    gap: 10px;
-    flex-wrap: nowrap;
-    margin-left: 500px; */
-    padding: 100px 90px;
-    border-radius: 20px;
-    display: flex;
-    gap: 10px;
-    margin-left: 400px;
-  }
+.join_wrapper-box {
+  width: 1050px;
+  height: 430px;
+  background-color: #3b3b3b;
+  border-radius: 20px;
+  margin-top: 150px;
+}
 
-  .item {
-    background-color: #3d3b3b;
-    border-radius: 10px;
-    height: 500px;
-    width: 350px;
-  }
-  
-  .uctasibirda {
-    margin-top: -100px;
-    margin-left: 90px;
-  }
-  .photo {
-    color: white;
-    font-size: 24px;
-    margin-top: 20px;
-    text-align: center;
-  }
-  .go {
-    color: white;
-    font-size: 24px;
-    margin-top: 20px;
-    text-align: center;
-  }
-  .hu {
-    color: white;
-    font-size: 24px;
-    margin-top: 20px;
-    text-align: center;
-  }
-  .ol {
-    color: white;
-    font-size: 24px;
-    margin-top: 20px;
-    text-align: center;
-  }
-  .do {
-    margin-left: 70px;
-  }
-  .doo {
-    margin-left: 70px;
-  }
-  .dooo {
-    margin-left: 70px;
-  }
-  /* section7 end */
+.join_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.join_wrapper_box-content {
+  padding-top: 60px;
+  padding-left: 60px;
+}
+
+.join_wrapper_box-menu {
+  @include d-flex(flex, 80px);
+}
+
+.join_wrapper_right-title {
+  font-size: 38px;
+  font-weight: 600;
+  color: white;
+  padding-bottom: 10px;
+}
+
+.join_wrapper_right-mini {
+  font-size: 22px;
+  color: white;
+  font-weight: 400;
+  padding-bottom: 40px;
+}
+
+.join_wrapper_right_join {
+  width: 425px;
+  height: 60px;
+  border-radius: 20px;
+  background-color: white;
+}
+
+.join_wrapper_right_subs_box {
+  width: 211px;
+  height: 60px;
+  border-radius: 20px;
+  background-color: #a259ff;
+  text-align: center;
+  padding-top: 19px;
+}
+
+.join_wrapper_right_join {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.join_wrapper_right_title {
+  font-size: 16px;
+  color: #2b2b2b;
+  padding-left: 20px;
+}
+.join_wrapper_right_subs-title {
+  font-size: 16px;
+  font-weight: 600;
+  color: white;
+}
