--- a/css/style.css
+++ b/css/style.css
@@ -377,21 +377,23 @@ button {
   text-align: center;
 }
 
-.magic__wrapper {
+.section5__wrapper {
   background-image: linear-gradient(to top, #a259ff, transparent), url(/assests/qoziqorin2.png);
   height: 640px;
   background-repeat: no-repeat;
   margin-top: 100px;
   background-size: cover;
   padding: 380px 115px 0;
+  display: flex;
+  justify-content: space-between;
 }
 
-.magic__title {
+.section5__title {
   font-size: 51px;
   color: white;
 }
 
-.magic__minibox {
+.section5__box {
   width: 151px;
   height: 44px;
   border-radius: 20px;
@@ -402,7 +404,7 @@ button {
   text-align: center;
 }
 
-.magic__btn {
+.section5__btn {
   padding: 19px 50px;
   border: none;
   border-radius: 20px;
@@ -414,14 +416,14 @@ button {
   margin-top: 30px;
 }
 
-.minibox-text {
+.section5-box__text {
   color: white;
   font-size: 16px;
   padding-top: 11px;
   position: relative;
 }
 
-.magic__minibox:before {
+.section5-box:before {
   position: absolute;
   background-image: url(/assests/avatar2.png);
   width: 24px;
@@ -433,7 +435,7 @@ button {
   right: 20px;
 }
 
-.magic__btn::after {
+.section5__btn::after {
   position: absolute;
   width: 20px;
   height: 20px;
@@ -444,7 +446,7 @@ button {
   bottom: 17px;
 }
 
-.magic__right-box {
+.section5__right-box {
   width: 295px;
   height: 147px;
   background-color: #3b3b3b;
@@ -453,68 +455,57 @@ button {
   margin-top: 100px;
 }
 
-.magic__wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-
-.magic__right_box_title {
+.section5__right-box_title {
   font-size: 14px;
-  font-family: "Space Mono";
   color: white;
   padding: 30px 30px 10px 30px;
 }
 
-.right_box_menu-item {
-  display: flex;
-}
-
-.right_box_menu-hour {
-  font-size: 38px;
-  color: white;
-  font-weight: 600;
-}
-
-.right_box_menu-hour-name {
-  font-size: 13px;
-  font-family: "Space Mono";
-  color: white;
-}
-
-.right_box_menu-hour_dor {
-  font-size: 28px;
-  color: white;
-}
-
-.magic__right_box-menu {
-  display: flex;
-  padding-left: 30px;
-}
-
-.right_box_menu-item {
+.section5__menu-item {
   display: flex;
   flex-direction: column;
   padding-right: 10px;
 }
 
-.more {
+.section5__time {
+  font-size: 38px;
+  color: white;
+  font-weight: 600;
+}
+
+.section5__time__text {
+  font-size: 13px;
+  color: white;
+}
+
+.section5__dot {
+  font-size: 28px;
+  color: white;
+}
+
+.section5__box-menu {
+  display: flex;
+  padding-left: 30px;
+}
+
+.section6 {
   padding-top: 80px;
 }
 
-.more_wrapper_item-text {
+.section6__item-text {
   font-size: 38px;
   font-weight: 600;
   color: white;
   padding-bottom: 10px;
 }
 
-.more_wrapepr_item-minitext {
+.section6__explore {
   font-size: 22px;
   font-weight: 300;
   color: white;
 }
 
-.more_wrapper_item-btn {
+.section6__btn {
   padding: 19px 50px 19px 50px;
   background-color: transparent;
   border: none;
@@ -527,24 +518,24 @@ button {
   text-align: center;
 }
 
-.more_wrapper_item-btn:before {
-  position: absolute;
+.section6__btn:before {
   content: "";
+  position: absolute;
+  background-image: url(/assests/eye.png);
   background-size: cover;
   width: 20px;
   height: 20px;
-  background-image: url(/assests/eye.png);
-  left: 19px;
   bottom: 18px;
+  left: 19px;
 }
 
-.more_wrapper-item {
+.section666 {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.more_bottom-box {
+.section6__box {
   width: 420px;
   height: 469px;
   background-color: #3b3b3b;
@@ -552,7 +543,7 @@ button {
   margin-top: 60px;
 }
 
-.more_bottom_avatar-box {
+.section6__avatar {
   display: flex;
   align-items: center;
   justify-content: flex;
@@ -561,7 +552,7 @@ button {
   padding-left: 30px;
 }
 
-.more_bottom-title {
+.section6__title {
   font-size: 22px;
   color: white;
   font-weight: 600;
@@ -569,40 +560,39 @@ button {
   padding-top: 20px;
 }
 
-.more_bottom_avatar-name {
-  font-family: "Space Mono";
+.section6__avatar-name {
   font-size: 16px;
   color: white;
 }
 
-.more_bottom_avatar-item {
+.section6__menu {
   display: flex;
-  flex-direction: column;
-}
-
-.more_bottom_avatar_menu {
-  display: flex;
+  align-items: center;
   justify-content: space-between;
+  gap: 0;
   padding-left: 30px;
   padding-right: 30px;
   padding-top: 46px;
 }
 
-.more_bottom_avatar-price {
+.section6__menu-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.section6__price {
   font-size: 12px;
   color: #858584;
   font-weight: 300;
-  font-family: "Space Mono";
 }
 
-.more_bottom_avatar-number {
+.section6__number {
   font-size: 18px;
   font-weight: 400;
   color: white;
-  font-family: "Space Mono";
 }
 
-.more_wrapper_bottom_box {
+.section6__wrapper-box {
   display: flex;
   align-items: center;
   justify-content: flex;
@@ -685,7 +675,6 @@ button {
 
 .work__title {
   font-size: 38px;
-  color: white;
   margin-top: 120px;
 }
 
@@ -693,13 +682,11 @@ button {
   font-size: 22px;
   margin-top: 10px;
   margin-bottom: 48px;
-  color: white;
 }
 
 .rasm {
   width: 250px;
   height: 250px;
-  background-color: white;
   margin: auto;
 }
 
@@ -719,7 +706,6 @@ button {
 }
 
 .work__wrapper-text {
-  color: white;
   text-align: center;
 }
 
