--- a/scss/blocks/_section5.scss
+++ b/scss/blocks/_section5.scss
@@ -1,117 +1,107 @@
-.magic__wrapper {
-  background-image: linear-gradient(to top, #a259ff, transparent),
-    url(/assests/qoziqorin2.png);
-  height: 640px;
-  background-repeat: no-repeat;
-  margin-top: 100px;
-  background-size: cover;
-  padding: 380px 115px 0;
+.section5__wrapper {
+	background-image: linear-gradient(to top, #a259ff, transparent),
+		url(/assests/qoziqorin2.png);
+	height: 640px;
+	background-repeat: no-repeat;
+	margin-top: 100px;
+	background-size: cover;
+	padding: 380px 115px 0;
+	display: flex;
+	justify-content: space-between;
 }
-.magic__title {
-  font-size: 51px;
-  color: white;
-}
-
-.magic__minibox {
-  width: 151px;
-  height: 44px;
-  border-radius: 20px;
-  background-color: #3b3b3b;
-  text-align: center;
-  position: relative;
-  margin-bottom: 30px;
-  text-align: center;
-}
-.magic__btn {
-  padding: 19px 50px;
-  border: none;
-  border-radius: 20px;
-  font-weight: 600;
-  position: relative;
-  text-align: center;
-  color: #2b2b2b;
-  text-align: center;
-  margin-top: 30px;
-}
-.minibox-text {
-  color: white;
-  font-size: 16px;
-  padding-top: 11px;
-  position: relative;
-}
-.magic__minibox:before {
-  position: absolute;
-  background-image: url(/assests/avatar2.png);
-  width: 24px;
-  height: 24px;
-  content: "";
-  background-size: cover;
-  left: 10px;
-  top: 10px;
-  right: 20px;
+.section5__title {
+	font-size: 51px;
+	color: white;
 }
 
-.magic__btn::after {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  content: "";
-  background-image: url(/assests/eye.png);
-  background-size: cover;
-  left: 26px;
-  bottom: 17px;
+.section5__box {
+	width: 151px;
+	height: 44px;
+	border-radius: 20px;
+	background-color: #3b3b3b;
+	text-align: center;
+	position: relative;
+	margin-bottom: 30px;
+	text-align: center;
+}
+.section5__btn {
+	padding: 19px 50px;
+	border: none;
+	border-radius: 20px;
+	font-weight: 600;
+	position: relative;
+	text-align: center;
+	color: #2b2b2b;
+	text-align: center;
+	margin-top: 30px;
+}
+.section5-box__text {
+	color: white;
+	font-size: 16px;
+	padding-top: 11px;
+	position: relative;
+}
+.section5-box:before {
+	position: absolute;
+	background-image: url(/assests/avatar2.png);
+	width: 24px;
+	height: 24px;
+	content: '';
+	background-size: cover;
+	left: 10px;
+	top: 10px;
+	right: 20px;
 }
 
-.magic__right-box {
-  width: 295px;
-  height: 147px;
-  background-color: #3b3b3b;
-  opacity: 0.8;
-  border-radius: 20px;
-  margin-top: 100px;
-
+.section5__btn::after {
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	content: '';
+	background-image: url(/assests/eye.png);
+	background-size: cover;
+	left: 26px;
+	bottom: 17px;
 }
 
-.magic__wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-.magic__right_box_title {
-  font-size: 14px;
-  font-family: "Space Mono";
-  color: white;
-  padding: 30px 30px 10px 30px;
+.section5__right-box {
+	width: 295px;
+	height: 147px;
+	background-color: #3b3b3b;
+	opacity: 0.8;
+	border-radius: 20px;
+	margin-top: 100px;
 }
 
-.right_box_menu-item {
-  display: flex;
+.section5__right-box_title {
+	font-size: 14px;
+	color: white;
+	padding: 30px 30px 10px 30px;
 }
 
-.right_box_menu-hour {
-  font-size: 38px;
-  color: white;
-  font-weight: 600;
+.section5__menu-item {
+	display: flex;
+	flex-direction: column;
+	padding-right: 10px;
 }
 
-.right_box_menu-hour-name {
-  font-size: 13px;
-  font-family: "Space Mono";
-  color: white;
+.section5__time {
+	font-size: 38px;
+	color: white;
+	font-weight: 600;
 }
 
-.right_box_menu-hour_dor {
-  font-size: 28px;
-  color: white;
+.section5__time__text {
+	font-size: 13px;
+	color: white;
 }
 
-.magic__right_box-menu {
-  display: flex;
-  padding-left: 30px;
-  
+.section5__dot {
+	font-size: 28px;
+	color: white;
 }
 
-.right_box_menu-item {
-  display: flex;
-  flex-direction: column;
-  padding-right: 10px;
+.section5__box-menu {
+	display: flex;
+	padding-left: 30px;
 }
