--- a/scss/blocks/_section6.scss
+++ b/scss/blocks/_section6.scss
@@ -1,108 +1,101 @@
-.more {
-  padding-top: 80px;
+.section6 {
+	padding-top: 80px;
 }
 
-.more_wrapper_item-text {
-  font-size: 38px;
-  font-weight: 600;
-  color: white;
-  padding-bottom: 10px;
+.section6__item-text {
+	font-size: 38px;
+	font-weight: 600;
+	color: white;
+	padding-bottom: 10px;
 }
 
-.more_wrapepr_item-minitext {
-  font-size: 22px;
-  font-weight: 300;
-  color: white;
+.section6__explore {
+	font-size: 22px;
+	font-weight: 300;
+	color: white;
 }
 
-.more_wrapper_item-btn {
-  padding: 19px 50px 19px 50px;
-  background-color: transparent;
-  border: none;
-  border: 1px solid #a259ff;
-
-  color: white;
-  font-weight: 500;
-  font-size: 16px;
-  border-radius: 20px;
-  position: relative;
-  text-align: center;
+.section6__btn {
+	padding: 19px 50px 19px 50px;
+	background-color: transparent;
+	border: none;
+	border: 1px solid #a259ff;
+	color: white;
+	font-weight: 500;
+	font-size: 16px;
+	border-radius: 20px;
+	position: relative;
+	text-align: center;
 }
 
-.more_wrapper_item-btn:before {
-  position: absolute;
-  content: "";
-  background-size: cover;
-  width: 20px;
-  height: 20px;
-  background-image: url(/assests/eye.png);
-  left: 19px;
-  bottom: 18px;
+.section6__btn:before {
+	content: '';
+	position: absolute;
+	background-image: url(/assests/eye.png);
+	background-size: cover;
+	width: 20px;
+	height: 20px;
+	bottom: 18px;
+	left: 19px;
 }
 
-.more_wrapper-item {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.section666 {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
-.more_bottom-box {
-  width: 420px;
-  height: 469px;
-  background-color: #3b3b3b;
-  border-radius: 20px;
-  margin-top: 60px;
+.section6__box {
+	width: 420px;
+	height: 469px;
+	background-color: #3b3b3b;
+	border-radius: 20px;
+	margin-top: 60px;
 }
 
-.more_bottom_avatar-box {
-  @include d-flex(flex, 12px);
-  padding-top: 5px;
-  padding-left: 30px;
+.section6__avatar {
+	@include d-flex(flex, 12px);
+	padding-top: 5px;
+	padding-left: 30px;
 }
 
-.more_bottom-title {
-  font-size: 22px;
-  color: white;
-  font-weight: 600;
-  padding-left: 30px;
-  padding-top: 20px;
+.section6__title {
+	font-size: 22px;
+	color: white;
+	font-weight: 600;
+	padding-left: 30px;
+	padding-top: 20px;
 }
 
-.more_bottom_avatar-name {
-  font-family: "Space Mono";
-  font-size: 16px;
-  color: white;
+.section6__avatar-name {
+	font-size: 16px;
+	color: white;
 }
 
-.more_bottom_avatar-item {
-  display: flex;
-  flex-direction: column;
+.section6__menu {
+	@include d-flex(space-between, 0);
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-top: 46px;
 }
 
-.more_bottom_avatar_menu {
-  display: flex;
-  justify-content: space-between;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 46px;
+.section6__menu-item {
+	display: flex;
+	flex-direction: column;
 }
 
-.more_bottom_avatar-price {
-  font-size: 12px;
-  color: #858584;
-  font-weight: 300;
-  font-family: "Space Mono";
+.section6__price {
+	font-size: 12px;
+	color: #858584;
+	font-weight: 300;
 }
 
-.more_bottom_avatar-number {
-  font-size: 18px;
-  font-weight: 400;
-  color: white;
-  font-family: "Space Mono";
+.section6__number {
+	font-size: 18px;
+	font-weight: 400;
+	color: white;
 }
 
-.more_wrapper_bottom_box {
-  @include d-flex(flex, 30px);
+.section6__wrapper-box {
+	@include d-flex(flex, 30px);
 }
-
-
